--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "type": "git",
     "url": "git+https://github.com/HunterT11/react-native-hidden-animations"
   },
+    "bugs": {
+    "url": "https://github.com/HunterT11/react-native-hidden-animations/issues"
+  },
+    "author": {
+    "email": "thachhunter1@gmail.com",
+    "name": "Nguyen Hoang Thach"
+  },
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.0",
